examples/test/testpolicy18940.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18940
  namespace: namespace496
spec:
  podSelector:
    matchLabels:
      key46: value36
      key22: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value30
          key4: value38
      podSelector:
        matchLabels:
          key37: value20
          key32: value16
